[package]
name = "rust-symbols"
version = "0.1.0"
edition = "2021"
description = "Compact, grep-friendly code index for Rust workspaces — built for LLM agents"
license = "MIT"
repository = "https://github.com/jimmygchen/rust-symbols"
keywords = ["llm", "index", "code-navigation", "rust-analyzer", "ai"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
walkdir = "2"
ignore = "0.4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.27.0"
